{
    "name": "TableManager",
    "maps": [
        {
            "name": "Table",
            "id": "ba0aeadf-0206-41cc-b8e7-b80f3a537489",
            "actions": [
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "dd8caab6-d1f6-45ab-9a24-977dd7ee90c9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AddRedGamJeom",
                    "type": "Button",
                    "id": "0a993950-032b-4a1b-ad34-c3a410c4e7b8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AddBlueGamJeom",
                    "type": "Button",
                    "id": "0322a939-bee0-49c4-8ac0-7d306e7dbe05",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d09c6eb7-6a30-4f42-beac-9e9a606b642b",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a4e1ccbc-e0db-4f3b-ad1b-5558ab26fe03",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "AddRedGamJeom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "65469194-46d1-4011-8b4d-27e4370d2601",
                    "path": "<Keyboard>/b",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "AddBlueGamJeom",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}